2003-01-11  Andras Varga

	* main.tcl: appearance of menus on Unix made more contemporary 
	(via option add's)

2003-01-10  Andras Varga

	* implemented object tree view on left of main Tkenv window

2003-01-06  Andras Varga

	* misc improvements: display string added to module inspectors
	(editable); inspector toolbar improved; rest of Tcl_SetResult() fixed;
	submodule drawing (interpretation of display strings) made entirely
	consistent with GNED; subtle bug fixed which sometimes caused display 
	string updates not take effect.

	* layout handling rules slightly changed: "p=x,y" now ALWAYS means 
	"p=x,y,exact", even if the submodule is part of a vector for which
	a "row" or "ring" autolayout is chosen automatically. (Before, "p=x,y"
	meant "p=x,y,row" or "p=x,y,ring" if the submod was in a vector,
	and this caused counterintuitive displacements because a (dx,dy) shift
	coming from the layout was superponed onto the position (x,y)).

2003-01-05  Andras Varga

	* misc improvements, e.g. New Run and New Network icons added to toolbar

2002-12-21  Andras Varga

        * all inspector windows: added a "name bar" which displays object
        type, fullpath, with modules the module id, and the object pointer;
        also added color coding so that different inspectors of the same object
        are easier to match visually.

        * File|Create snapshot now offers to open the snapshot file in a viewer
        window.

	* added tooltips to graphical inspectors. I.e. if you position the 
	mouse over a module icon, its name, type and id will appear in a 
	tooltip.

	* added 'Simulation options' toolbar button; removed Tcl console from
	Options menu; other small UI changes

2002-12-07  Andras Varga

	* File|New network and File|New run dialogs now correctly offer choices
	of all available networks and all available run numbers

	* tkcmd.cc and other files: most direct assignments to interp->result 