@@ -1,3 +1,7 @@
+2003-01-12  Andras Varga
+
+	* fixes on the inspector type selection dialog
+
 2003-01-11  Andras Varga
 
 	* main.tcl: appearance of menus on Unix made more contemporary 
